// Nel file: ./model/Domanda.js
import mongoose from 'mongoose';

// Sotto-schema per le Opzioni (sono semplici stringhe in questo caso)
const opzioneSchema = new mongoose.Schema({
    testo: {
        type: String,
        required: true,
        trim: true
    }
}, {
        _id: true,
        minimize: false // Mongoose non salva id dei subdocumenti se non impedisci la minimizzazione, yessirski
    }); // Non è necessario un ID per ogni singola opzione di testo

const domandaSchema = new mongoose.Schema({ 
    
    titolo: {
        type: String,
        trim: true,
        required: [true, 'Testo della domanda obbligatorio.']
    },
    
    // Contenuto critico: le opzioni di risposta
    opzioni: {
        type: [opzioneSchema],
        required: [true, 'La domanda deve avere opzioni di risposta.'],
        validate: {
            validator: function(v) { return v && v.length >= 2; },
            message: 'Devi specificare almeno due opzioni di risposta.'
        }
    },
    
    tipo: { // Definisce se è possibile una sola scelta o più scelte
        type: String,
        enum: ['risposta_multipla', 'risposta_singola'], // Usiamo snake_case per consistenza R: ok
        default: 'risposta_singola',
        required: [true, 'Tipo domanda obbligatorio.'],
        trim: true
    }
}, { 
    timestamps: true,
    minimize: false
});

export const Domanda = mongoose.model('Domanda', domandaSchema);