@startuml IoSonoTrento

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classFontSize 12
skinparam classBackgroundColor #F8F9FA
skinparam classBorderColor #0052A3
skinparam classHeaderBackgroundColor #0052A3
skinparam classHeaderFontColor #FFFFFF
skinparam arrowColor #333333
skinparam linetype ortho

' ─── Cittadino ──────────────────────────────────────────────────────────────
class Cittadino {
  + _id : ObjectId
  + nome : String
  + cognome : String
  + dataNascita : Date
  + comuneResidenza : String
  + circoscrizione : String
  + ID_univoco_esterno : String <<unique>>
  + genere : String <<enum: Uomo, Donna>>
  + categoria : String <<enum>>
  + email : String <<unique>>
  + loggedIn : Boolean
  + profiloCompleto : Boolean
}

' ─── Operatore ──────────────────────────────────────────────────────────────
class Operatore {
  + _id : ObjectId
  + username : String <<unique, required>>
  + password : String <<bcrypt, required>>
  + nome : String <<required>>
  + cognome : String <<required>>
  + isRoot : Boolean
  --
  + matchPassword(pwd) : Boolean
}

' ─── CategoriaIniziativa ────────────────────────────────────────────────────
class CategoriaIniziativa {
  + _id : ObjectId
  + nome : String <<unique, required>>
}

' ─── Iniziativa ─────────────────────────────────────────────────────────────
class Iniziativa {
  + _id : ObjectId
  + titolo : String <<unique, required>>
  + descrizione : String <<required>>
  + stato : String <<enum: in_attesa, approvata, rifiutata>>
  + motivazione_moderazione : String
  + createdAt : Date
  + updatedAt : Date
  --
  + ID_cittadino : ObjectId <<FK>>
  + ID_categoria : ObjectId <<FK>>
}

' ─── VotoIniziativa ─────────────────────────────────────────────────────────
class VotoIniziativa {
  + _id : ObjectId
  + createdAt : Date
  + updatedAt : Date
  --
  + ID_cittadino : ObjectId <<FK>>
  + ID_iniziativa : ObjectId <<FK>>
}

note bottom of VotoIniziativa
  Indice univoco:
  (ID_cittadino, ID_iniziativa)
end note

' ─── Domanda ────────────────────────────────────────────────────────────────
class Domanda {
  + _id : ObjectId
  + titolo : String <<required>>
  + tipo : String <<enum: risposta_singola, risposta_multipla>>
  + createdAt : Date
  + updatedAt : Date
}

class Opzione {
  + _id : ObjectId
  + testo : String <<required>>
}

' ─── Consultazione ──────────────────────────────────────────────────────────
class Consultazione {
  + _id : ObjectId
  + tipo : String <<enum: votazione, sondaggio>>
  + stato : String <<enum: bozza, attivo, concluso, archiviato>>
  + titolo : String <<unique, required>>
  + descrizione : String <<required>>
  + data_inizio : Date <<required>>
  + data_fine : Date <<required>>
  + data_discussione : Date <<required>>
  + createdAt : Date
  + updatedAt : Date
  --
  + ID_domanda : ObjectId <<FK, solo votazione>>
  + ID_domande : ObjectId[] <<FK, solo sondaggio>>
  + creatoDa : ObjectId <<FK>>
}

note right of Consultazione
  ID_domanda e ID_domande
  sono mutuamente esclusivi
end note

' ─── RispostaConsultazione ──────────────────────────────────────────────────
class RispostaConsultazione {
  + _id : ObjectId
  + tipo_consultazione : String <<enum: votazione, sondaggio>>
  + createdAt : Date
  + updatedAt : Date
  --
  + ID_consultazione : ObjectId <<FK>>
  + ID_cittadino : ObjectId <<FK>>
  + ID_opzione : ObjectId <<FK, solo votazione>>
}

class DettaglioRisposta {
  + ID_domanda : ObjectId <<FK>>
  + opzioniScelte : ObjectId[]
}

note bottom of RispostaConsultazione
  Indice univoco:
  (ID_cittadino, ID_consultazione)
end note

' ─── Relazioni ──────────────────────────────────────────────────────────────

Cittadino "1" --o{ "0..*" Iniziativa : propone
Cittadino "1" --o{ "0..*" VotoIniziativa : esprime
Cittadino "1" --o{ "0..*" RispostaConsultazione : risponde

Operatore "1" --o{ "0..*" Consultazione : crea

CategoriaIniziativa "1" --o{ "0..*" Iniziativa : classifica

Iniziativa "1" --o{ "0..*" VotoIniziativa : riceve

Consultazione "1" --o{ "0..*" RispostaConsultazione : raccoglie
Consultazione "0..*" }o--|| "1" Domanda : (votazione) usa
Consultazione "0..*" }o--o{ "1..*" Domanda : (sondaggio) usa

Domanda "1" *-- "2..*" Opzione : contiene

RispostaConsultazione "1" *-- "0..*" DettaglioRisposta : (sondaggio) dettagli

@enduml
